@@ -1,3 +1,8 @@
+2008-03-02  Robert Ancell  <robert.ancell@gmail.com>
+
+	* src/lib/gtkui/chessview.py: Handle gtk.gtkgl.widget_get_gl_drawable() returning
+	  None (bugs #488902 and #512068).
+
 2008-02-19  Robert Ancell  <robert.ancell@gmail.com>
 
 	* src/lib/scene/opengl/new_models.py: Use OpenGL vertex arrays to speed up initial
